@@ -139,7 +139,8 @@
         <script type="text/javascript">
 	        var line_options = {
 	            /* Not available globally, but it fixes duplicate tooltips being triggered by x-axis data points close to each other. */
-	            pointHitDetectionRadius: 2,
+	            pointHitDetectionRadius: 3,
+                pointDotRadius: 2.5,
 	        }
         
         	$(document).ready(function(){
